--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -59,11 +59,17 @@
 
         <projectService
                 serviceImplementation="com.github.restful.tool.view.search.GotoRequestConfiguration"/>
-
-        
         
         
         <toolWindow id="RestfulTool" anchor="right"
+                    factoryClass="com.github.restful.tool.view.window.RestfulToolWindowFactory"
+                    order="last"
+                    doNotActivateOnStart="true" icon="/icons/service.png"
+                    canCloseContents="true"/>
+        
+        
+        
+        <toolWindow id="RestfulTool----" anchor="right"
                     factoryClass="com.github.restful.tool.view.window.RestfulToolWindowFactory"
                     order="last"
                     doNotActivateOnStart="true" icon="/icons/service.png"
